[exp] working configuration to improve

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "@massalabs/massa-web3",
     "version": "1.16.1",
     "description": "massa's web3 sdk client",
-    "main": "dist/index.js",
+    "main": "dist/massa-web3.js",
+    "module": "dist/esm/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
         "up": "npm update",
@@ -10,7 +11,8 @@
         "upgrade": "npm run up && npm run check && npm run build",
         "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
         "build-bundle": "webpack",
-        "build": "npm run build-package && npm run build-bundle",
+        "build-esm": "tsc --project tsconfig.esm.json",
+        "build": "npm run build-package && npm run build-bundle && npm run build-esm",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
@@ -59,6 +61,7 @@
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@types/ws": "^8.5.4",
+        "@web3pack/base58-check": "^1.0.3",
         "axios": "^0.26.1",
         "base58check": "^2.0.0",
         "bignumber.js": "^9.1.1",
@@ -82,7 +85,7 @@
         "@types/secp256k1": "^4.0.3",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
-        "babel-jest": "^29.5.0",
+        "babel-loader": "^9.1.2",
         "browserify": "^17.0.0",
         "chalk": "^4.1.0",
         "eslint": "^8.34.0",
