--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "commonjs",
+        "declaration": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "jsx": "preserve",
