--- a/package.json
+++ b/package.json
@@ -2,26 +2,24 @@
     "name": "@massalabs/massa-web3",
     "version": "1.16.1",
     "description": "massa's web3 sdk client",
-    "main": "dist/massa-web3.js",
+    "main": "dist/cmd/index.js",
     "module": "dist/esm/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
         "up": "npm update",
         "check": "npm outdated",
         "upgrade": "npm run up && npm run check && npm run build",
-        "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
-        "build-bundle": "webpack",
+        "clean-dist": "rimraf dist/*",
         "build-esm": "tsc --project tsconfig.esm.json",
-        "build": "npm run build-package && npm run build-bundle && npm run build-esm",
+        "build-commonjs": "tsc --project tsconfig.commonjs.json",
+        "build-bundle": "webpack",
+        "build": "npm-run-all clean-dist build-*",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
         "test": "jest",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
-        "test-ws-blocks": "ts-node ./examples/websockets/ws-blocks.ts",
-        "test-ws-block-headers": "ts-node ./examples/websockets/ws-block-headers.ts",
-        "test-ws-filled-blocks": "ts-node ./examples/websockets/ws-filled-blocks.ts",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "prettier": "prettier --check .",
@@ -73,8 +71,7 @@
         "esmify": "^2.1.1",
         "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
-        "varint": "^6.0.0",
-        "ws": "^8.12.1"
+        "varint": "^6.0.0"
     },
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
@@ -100,6 +97,7 @@
         "jsdom": "^21.1.1",
         "lint-staged": "^13.1.2",
         "node-ts": "^5.1.2",
+        "npm-run-all": "^4.1.5",
         "ora": "^5.1.0",
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
@@ -115,8 +113,7 @@
         "uglify-js": "^3.17.4",
         "uglifyify": "^5.0.2",
         "webpack": "^5.82.0",
-        "webpack-cli": "^5.1.1",
-        "webpack-dev-server": "^4.15.0"
+        "webpack-cli": "^5.1.1"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
