--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,10 +1,26 @@
 {
-    "extends": "./tsconfig.json",
-    "compilerOptions": {
-        "module": "ES2020",
-        "target": "ES2020",
-        "outDir": "./dist/esm",
-        "declaration": true
-    },
-    "exclude": ["node_modules", "**/*.spec.ts"]
+  // Extends base TypeScript configuration from 'tsconfig.json'
+  "extends": "./tsconfig.json",
+
+  "compilerOptions": {
+      // Specifies the module system for the output bundle. "ESNext" refers to the latest version of ECMAScript (JavaScript).
+      "module": "ESNext",
+
+      // The version of JavaScript that the compiler will output. "ESNext" means the latest version.
+      "target": "ESNext",
+
+      // The location where the output files will be placed.
+      "outDir": "./dist/esm/",
+
+      // If enabled (true), generates corresponding '.d.ts' file alongside the output file.
+      "declaration": true,
+
+      // If enabled, only declaration files will be emitted and no JavaScript files will be output.
+      // Currently commented out, so JavaScript files are being output as well.
+      // "emitDeclarationOnly": true
+  },
+
+  // A list of glob patterns that exclude certain files from the compilation.
+  // Here, it's set to exclude all the files in 'node_modules' and any file ending in '.spec.ts'.
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
