--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -38,9 +38,9 @@ jobs:
             exit 1
           fi
         env:
-          JSON_RPC_URL_PUBLIC: ${{ secrets.JSON_RPC_URL_PUBLIC }}
+          JSON_RPC_URL_PUBLIC: https://test.massa.net/api/v2
 
-          JSON_RPC_URL_PRIVATE: ${{ secrets.JSON_RPC_URL_PUBLIC }}
+          JSON_RPC_URL_PRIVATE: https://test.massa.net/api/v2
 
           DEPLOYER_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
           RECEIVER_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
