--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: "18"
           cache: "npm"
-          cache-dependency-path: ./package-lock.json
+          cache-dependency-path: ./examples/smartContracts/contracts/package-lock.json
 
       - name: Install dependencies
         run: npm install
@@ -31,6 +31,7 @@ jobs:
 
       - name: Deploy
         run: |
+          echo ${{ secrets.JSON_RPC_URL_PUBLIC }}
           if npm run test-smart-contract-example ; then
             echo "Contracts successfully deployed!"
           else
