--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -45,7 +45,7 @@ jobs:
         echo "coverage=$value" >> $GITHUB_OUTPUT
 
     - name: Add test coverage to README
-      run:  ${GITHUB_WORKSPACE}/.github/coverage.sh
+      run:  .github/coverage.sh
       shell: bash 
       env:
         COVERAGE: ${{ steps.coverage.outputs.coverage }}
