--- a/.github/workflows/powered-by.yml
+++ b/.github/workflows/powered-by.yml
@@ -2,7 +2,7 @@ name: Generate Powered-By
 on:
   push:
     branches:
-      - main
+      - 219-fix-generate-powered-by
 
 jobs:
   generate-powered-by:
@@ -36,7 +36,7 @@ jobs:
 
     - name: Generate Powered-By
       run: |
-        ./generate_power-by.sh
+        ./generate_powered-by.sh
 
     - name: Commit Changes
       uses: stefanzweifel/git-auto-commit-action@v4
