--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -43,9 +43,10 @@ jobs:
       run: |
         value=$(npm run test:ci | grep -oE '^│\s*total\s+\│\s*([0-9.]+)%' | grep -oE '[0-9]+(\.[0-9]+)?%' | cut -d'.' -f1 | tr -d '%')
         echo "coverage=$value" >> $GITHUB_OUTPUT
+        echo "${GITHUB_WORKSPACE}/.github/coverage.sh"
 
     - name: Add test coverage to README
-      run:  .github/coverage.sh
+      run:  ${GITHUB_WORKSPACE}/.github/coverage.sh
       shell: bash 
       env:
         COVERAGE: ${{ steps.coverage.outputs.coverage }}
