--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Extract coverage
       id: coverage
       run: |
-        value=$(npm run test | grep -oE '^│\s*total\s+\│\s*([0-9.]+)%' | grep -oE '[0-9]+(\.[0-9]+)?%' | cut -d'.' -f1 | tr -d '%')
+        value=$(npm run test | grep -oE '"lines":\s*{\s*"total":\s*{\s*"pct":\s*([\d.]+)\s*}' | grep -oE '[0-9]+(\.[0-9]+)?%' | cut -d'.' -f1 | tr -d '%')
         echo "coverage=$value" >> $GITHUB_OUTPUT
         echo "${GITHUB_WORKSPACE}/.github/coverage.sh"
 
