--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "bignumber.js": "^9.1.1",
         "bip39": "^3.0.4",
         "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "esmify": "^2.1.1",
@@ -99,6 +100,7 @@
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
         "prettier-standard": "^16.4.1",
+        "stream-browserify": "^3.0.0",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
