--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
         "husky": "^8.0.3",
         "jest": "^29.5.0",
         "jsdom": "^21.1.1",
-        "lint-staged": "^13.1.2",
+        "lint-staged": "^13.2.2",
         "node-ts": "^5.1.2",
         "ora": "^5.1.0",
         "prettier": "^2.8.4",
@@ -110,5 +110,17 @@
         "bufferutil": "^4.0.7",
         "utf-8-validate": "^6.0.2"
     },
-    "prettier": "@massalabs/prettier-config-as"
+    "prettier": "@massalabs/prettier-config-as",
+    "husky": {
+        "hooks": {
+          "pre-commit": "npm run test"
+        }
+    },
+    "lint-staged": {
+        "*.ts": [
+            "prettier --check",
+            "eslint --fix",
+            "git add"
+        ]
+    }
 }
