--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "prettier:fix": "prettier --write .",
         "fmt": "npm run prettier:fix && npm run lint:fix",
         "fmt:check": "npm run prettier && npm run lint",
-        "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json"
+        "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json",
+        "prepare": "husky install"
     },
     "author": "Massa Labs <info@massa.net>",
     "contributors": [
@@ -88,7 +89,7 @@
         "eslint-plugin-jsdoc": "^40.0.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
-        "husky": "^8.0.3",
+        "husky": "^8.0.0",
         "jest": "^29.5.0",
         "jsdom": "^21.1.1",
         "lint-staged": "^13.2.2",
@@ -110,17 +111,5 @@
         "bufferutil": "^4.0.7",
         "utf-8-validate": "^6.0.2"
     },
-    "prettier": "@massalabs/prettier-config-as",
-    "husky": {
-        "hooks": {
-          "pre-commit": "npm run test"
-        }
-    },
-    "lint-staged": {
-        "*.ts": [
-            "prettier --check",
-            "eslint --fix",
-            "git add"
-        ]
-    }
+    "prettier": "@massalabs/prettier-config-as"
 }
