--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
     "name": "@massalabs/massa-web3",
     "version": "1.16.1",
     "description": "massa's web3 sdk client",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "dist/cmd/index.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/esm/index.d.ts",
     "scripts": {
         "up": "npm update",
         "check": "npm outdated",
         "upgrade": "npm run up && npm run check && npm run build",
-        "build-package": "rimraf dist/* && tsc -d -p ./tsconfig.json",
-        "build-bundle": "npm run gen-bundle && npm run uglify-bundle-optimize",
-        "gen-bundle": "browserify dist/index.js -p esmify --standalone massa > bundle.js",
-        "uglify-bundle-optimize": "browserify dist/index.js -p esmify -i node-fetch -i http -i https -o bundle.min.js && browserify dist/index.js -p esmify -i node-fetch -g uglifyify --compress --mangle -o bundle.min.js",
-        "build": "npm run build-package && npm run build-bundle",
+        "clean-dist": "rimraf dist/*",
+        "build-esm": "tsc --project tsconfig.esm.json",
+        "build-commonjs": "tsc --project tsconfig.commonjs.json",
+        "build-bundle": "webpack",
+        "build": "npm-run-all clean-dist build-*",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
@@ -59,16 +60,19 @@
     "dependencies": {
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
+        "@types/ws": "^8.5.4",
+        "@web3pack/base58-check": "^1.0.3",
         "axios": "^0.26.1",
-        "base58check": "^2.0.0",
         "bignumber.js": "^9.1.1",
         "bip39": "^3.0.4",
+        "bs58check": "^3.0.1",
         "buffer": "^6.0.3",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "esmify": "^2.1.1",
         "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
+        "tslib": "^2.5.2",
         "varint": "^6.0.0"
     },
     "devDependencies": {
@@ -80,8 +84,6 @@
         "@types/secp256k1": "^4.0.3",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
-        "babel-jest": "^29.5.0",
-        "browserify": "^17.0.0",
         "chalk": "^4.1.0",
         "eslint": "^8.34.0",
         "eslint-config-airbnb-base": "^15.0.0",
@@ -94,18 +96,18 @@
         "jest": "^29.5.0",
         "jsdom": "^21.1.1",
         "node-ts": "^5.1.2",
+        "npm-run-all": "^4.1.5",
         "ora": "^5.1.0",
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
         "prettier-standard": "^16.4.1",
         "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
-        "tslib": "^2.5.0",
-        "tslint": "^6.1.3",
         "typedoc": "^0.23.25",
         "typescript": "^4.9.5",
-        "uglify-js": "^3.17.4",
-        "uglifyify": "^5.0.2"
+        "webpack": "^5.82.0",
+        "webpack-cli": "^5.1.1"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
