--- a/examples/smartContracts/contracts/package.json
+++ b/examples/smartContracts/contracts/package.json
@@ -6,8 +6,8 @@
         "build": "run-s build:1 build:2"
     },
     "devDependencies": {
-        "@massalabs/as-types": "^0.0.3-dev",
-        "@massalabs/massa-as-sdk": "^2.0.2-dev",
+        "@massalabs/as-types": "^1.0.0",
+        "@massalabs/massa-as-sdk": "^2.1.0",
         "assemblyscript": "^0.25.2",
         "npm-run-all": "^4.1.5"
     }
