--- a/.github/workflows/powered-by.yml
+++ b/.github/workflows/powered-by.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Commit Changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        token: 
+        token: ${{ secrets.MASSABOTCLASSIC }}
         commit_message: "Generate powered-by"
         file_pattern: "powered-by.md"
         # Commit code using massabot account that can bypass push and MR restriction
