--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
         "dotenv": "^16.0.3",
         "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
+        "string_decoder": "^1.3.0",
         "tslib": "^2.5.2",
+        "util": "^0.12.5",
         "varint": "^6.0.0"
     },
     "devDependencies": {
