--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
         "strictNullChecks": false,
         "downlevelIteration": true,
         "outDir": "dist",
-        "types": ["node"],
+        "types": ["node", "jest"],
         "typeRoots": ["node_modules/@types"],
         "lib": [
             "es7",
