--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -2,8 +2,6 @@ name: Smart contract example Deploy
 
 on:
   push:
-    branches:
-      - main
 
 
 jobs:
@@ -33,7 +31,6 @@ jobs:
 
       - name: Deploy
         run: |
-          echo ${{ secrets.JSON_RPC_URL_PUBLIC }}
           if npm run test-smart-contract-example ; then
             echo "Contracts successfully deployed!"
           else
@@ -41,9 +38,9 @@ jobs:
             exit 1
           fi
         env:
-          JSON_RPC_URL_PUBLIC: https://test.massa.net/api/v2
+          JSON_RPC_URL_PUBLIC: https://buildnet.massa.net/api/v2
 
-          JSON_RPC_URL_PRIVATE: https://test.massa.net/api/v2
+          JSON_RPC_URL_PRIVATE: https://buildnet.massa.net/api/v2
 
-          DEPLOYER_PRIVATE_KEY: S12srNEAvZrTb9pktYeuePpuM4taW5dfmWAZYtdqyETWTBspkoT1
+          DEPLOYER_PRIVATE_KEY: ${{ secret.WALLET_PRIVATE_KEY }}
           RECEIVER_PRIVATE_KEY: S1ykLaxXyMnJoaWLYds8UntqKTamZ4vcxrZ1fdToR8WpWEpk3FC
