--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "dotenv": "^16.0.3",
         "jest-environment-jsdom": "^29.5.0",
         "js-base64": "^3.7.5",
+        "protobufjs": "^7.2.3",
         "string_decoder": "^1.3.0",
         "tslib": "^2.5.2",
         "util": "^0.12.5",
