--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "skipLibCheck": true,
         "strictNullChecks": false,
         "downlevelIteration": true,
+        "esModuleInterop": true,
         "outDir": "dist",
         "types": ["node", "jest"],
         "typeRoots": ["node_modules/@types"],
