--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
         "skipLibCheck": true,
         "strictNullChecks": false,
         "downlevelIteration": true,
+        "esModuleInterop": true,
         "outDir": "dist",
-        "types": ["node"],
+        "types": ["node", "jest"],
         "typeRoots": ["node_modules/@types"],
         "lib": [
             "es7",
