--- a/.github/workflows/npm-publish-dev.yml
+++ b/.github/workflows/npm-publish-dev.yml
@@ -1,8 +1,8 @@
-name: Npm nightly publish
+name: NPM Publish buildnet-dev
 
 on:
   push:
-    branches: [ main ]
+    branches: [ buildnet ]
 
 jobs:
   test:
