--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-name: Node.js Package
+name: NPM Publish buildnet release
 
 on:
     release:
@@ -23,7 +20,7 @@ jobs:
             - run: |
                   npm ci
                   npm run build
-                  npm publish --access public
+                  npm publish --access public --tag buildnet
               env:
                   NODE_AUTH_TOKEN: ${{secrets.npm_token}}
             - uses: softprops/action-gh-release@v1
