--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-name: Node.js Package
+name: NPM Publish
 
 on:
     release:
@@ -20,10 +17,7 @@ jobs:
               with:
                   node-version: 18
                   registry-url: https://registry.npmjs.org/
-            - run: |
-                  npm ci
-                  npm run build
-                  npm publish --access public
+            - run: ./scripts/publish.sh
               env:
                   NODE_AUTH_TOKEN: ${{secrets.npm_token}}
             - uses: softprops/action-gh-release@v1
