--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy
+      - name: Execution of tests
         run: |
           echo ${{ secrets.JSON_RPC_URL_PUBLIC }}
           if npm run test-smart-contract-example ; then
