change job name

--- a/.github/workflows/test-wallet-example.yml
+++ b/.github/workflows/test-wallet-example.yml
@@ -28,7 +28,7 @@ jobs:
 
 
 
-      - name: Deploy
+      - name: Execute tests
         run: |
           if npm run test-wallet ; then
             echo "Successful execution!"
