--- a/.github/workflows/powered-by.yml
+++ b/.github/workflows/powered-by.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Generate Powered-By
       run: |
-        ./generate_powered-by.sh
+        ./scripts/generate_powered-by.sh
 
     - name: Commit Changes
       uses: stefanzweifel/git-auto-commit-action@v4
