--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -39,7 +39,7 @@ jobs:
         npm run test
 
     - name: allow access to coverage.sh
-      run: chmod +x ${GITHUB_WORKSPACE}/.github/coverage.sh
+      run: chmod +x ./scripts/coverage.sh
       shell: bash
 
     - name: Extract coverage
@@ -47,16 +47,21 @@ jobs:
       run: |
         value=$(npm run test:cov | awk '/All files/ {print $10}' | tr -d '%')
         echo "coverage=$value" >> $GITHUB_OUTPUT
-        echo "${GITHUB_WORKSPACE}/.github/coverage.sh"
 
     - name: Add test coverage to README
-      run:  ${GITHUB_WORKSPACE}/.github/coverage.sh
+      run:  ./scripts/coverage.sh
       shell: bash 
       env:
         COVERAGE: ${{ steps.coverage.outputs.coverage }}
 
+    - name: Check if coverage changed
+      id: check_coverage_changed
+      run: |
+        echo "::set-output name=coverage_changed::$(git diff --name-only README.md | grep -E '^README.md$')"
+
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
+      if: steps.check_coverage_changed.outputs.coverage_changed != ''
       with:
         commit_message: "Generate coverage badge"
         file_pattern: "README.md"
