--- a/.github/workflows/deploy-test-smartContract.yml
+++ b/.github/workflows/deploy-test-smartContract.yml
@@ -38,10 +38,8 @@ jobs:
             echo "Failed to deploy contracts ..."
             exit 1
           fi
-        env:
-          JSON_RPC_URL_PUBLIC: https://buildnet.massa.net/api/v2
-
-          JSON_RPC_URL_PRIVATE: https://buildnet.massa.net/api/v2
-
-          DEPLOYER_PRIVATE_KEY: S12srNEAvZrTb9pktYeuePpuM4taW5dfmWAZYtdqyETWTBspkoT1
-          RECEIVER_PRIVATE_KEY: S1ykLaxXyMnJoaWLYds8UntqKTamZ4vcxrZ1fdToR8WpWEpk3FC
+          env:
+            JSON_RPC_URL_PUBLIC: ${{ secrets.JSON_RPC_URL_PUBLIC }}
+            JSON_RPC_URL_PRIVATE: ${{ secrets.JSON_RPC_URL_PRIVATE }}
+            DEPLOYER_SECRET_KEY: ${{ secrets.DEPLOYER_SECRET_KEY }}
+            RECEIVER_SECRET_KEY: ${{ secrets.RECEIVER_SECRET_KEY }}
