renaming RECEIVER_SECRET_KEY

--- a/.github/workflows/test-wallet-example.yml
+++ b/.github/workflows/test-wallet-example.yml
@@ -40,4 +40,4 @@ jobs:
           JSON_RPC_URL_PUBLIC: ${{ secrets.JSON_RPC_URL_PUBLIC }}
           JSON_RPC_URL_PRIVATE: ${{ secrets.JSON_RPC_URL_PRIVATE }}
           DEPLOYER_SECRET_KEY: ${{ secrets.DEPLOYER_SECRET_KEY }}
-          RECEIVER_SECRET_KEY: ${{ secrets.RECEIVER_SECRET_KEY }}
+          OTHER_ACC_SECRET_KEY: ${{ secrets.OTHER_ACC_SECRET_KEY }}
