--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,5 +1,5 @@
 DEPLOYER_SECRET_KEY=""
-RECEIVER_SECRET_KEY=""
+OTHER_ACC_SECRET_KEY=""
 
 JSON_RPC_URL_PUBLIC=https://buildnet.massa.net/api/v2
 JSON_RPC_URL_PRIVATE=https://buildnet.massa.net/api/v2
