--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,5 +1,5 @@
-DEPLOYER_PRIVATE_KEY="S12srNEAvZrTb9pktYeuePpuM4taW5dfmWAZYtdqyETWTBspkoT1"
-RECEIVER_PRIVATE_KEY="S1ykLaxXyMnJoaWLYds8UntqKTamZ4vcxrZ1fdToR8WpWEpk3FC"
+DEPLOYER_SECRET_KEY="S12srNEAvZrTb9pktYeuePpuM4taW5dfmWAZYtdqyETWTBspkoT1"
+RECEIVER_SECRET_KEY="S1ykLaxXyMnJoaWLYds8UntqKTamZ4vcxrZ1fdToR8WpWEpk3FC"
 
 JSON_RPC_URL_PUBLIC=https://test.massa.net/api/v2
 JSON_RPC_URL_PRIVATE=https://test.massa.net/api/v2
