Use wallet provider in massa-web3

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
         "@massalabs/prettier-config-as": "^0.0.2",
+        "@massalabs/wallet-provider": "^1.0.0",
         "@types/bn.js": "^5.1.1",
         "@types/jest": "^29.5.1",
         "@types/node": "^18.13.0",
