Update buildnet cherry pic (#426)
* Introduce wallet provider (#423)

* Use wallet provider in massa-web3

* Remove constraint private provider

* Remove test on constraint private API and fix parameters format in call sc using wallet providers.

* Remove duplicate readsmart contract

* Rework client initialization

* Update package json (#425)

* Remove args and use web3-utils

* Update version

* update p json

---------

Co-authored-by: AurelienFT <aurelien.foucault@epitech.eu>

* update version minor

---------

Co-authored-by: AurelienFT <32803821+AurelienFT@users.noreply.github.com>
Co-authored-by: AurelienFT <aurelien.foucault@epitech.eu>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@massalabs/massa-web3",
-    "version": "1.21.0",
+    "version": "1.22.0",
     "description": "massa's web3 sdk client",
     "main": "dist/cmd/index.js",
     "module": "dist/esm/index.js",
@@ -58,6 +58,7 @@
         "bundle.min.js"
     ],
     "dependencies": {
+        "@massalabs/wallet-provider": "^1.2.0",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@types/ws": "^8.5.4",
@@ -79,6 +80,7 @@
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
         "@massalabs/prettier-config-as": "^0.0.2",
+        "@massalabs/web3-utils": "^1.1.0",
         "@types/bn.js": "^5.1.1",
         "@types/jest": "^29.5.2",
         "@types/node": "^18.13.0",
