--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
         "prettier-standard": "^16.4.1",
+        "rimraf": "^5.0.1",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
