--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "devDependencies": {
         "@massalabs/eslint-config": "^0.0.9",
         "@massalabs/prettier-config-as": "^0.0.2",
-        "@massalabs/web3-utils": "^1.1.0",
+        "@massalabs/web3-utils": "^1.2.0",
         "@types/bn.js": "^5.1.1",
         "@types/jest": "^29.5.1",
         "@types/node": "^18.13.0",
@@ -104,6 +104,7 @@
         "prettier": "^2.8.4",
         "prettier-eslint": "^15.0.1",
         "prettier-standard": "^16.4.1",
+        "rimraf": "^5.0.1",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
