--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
         "bundle.min.js"
     ],
     "dependencies": {
-        "@massalabs/wallet-provider": "^1.3.2",
+        "@massalabs/wallet-provider": "^1.3.3-dev.20230823143856",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@types/ws": "^8.5.4",
