--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
         "test": "jest",
+        "test:watch": "jest --watch",
+        "test:watch:all": "jest --watchAll", 
         "test:cov": "jest --coverage",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
