--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,17 +11,12 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
-        strategy:
-            matrix:
-                node-version: [16.x, 18.x]
-                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
         steps:
             - uses: actions/checkout@v3
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Use Node.js 18
               uses: actions/setup-node@v3
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: 18
                   cache: "npm"
             - run: npm ci
             - run: npm run build
