--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "clean-dist": "rimraf dist/*",
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
-        "build-bundle": "webpack",
         "build": "npm-run-all clean-dist build-*",
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
@@ -113,9 +112,7 @@
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
         "typedoc": "^0.23.25",
-        "typescript": "^4.9.5",
-        "webpack": "^5.82.0",
-        "webpack-cli": "^5.1.1"
+        "typescript": "^4.9.5"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
