--- a/packages/web3-utils/tsconfig.json
+++ b/packages/web3-utils/tsconfig.json
@@ -25,8 +25,13 @@
         "downlevelIteration": true,
         "esModuleInterop": true,
         "outDir": "dist",
-        "types": ["node", "jest"],
-        "typeRoots": ["node_modules/@types"],
+        "types": [
+            "node",
+            "jest"
+        ],
+        "typeRoots": [
+            "node_modules/@types"
+        ],
         "lib": [
             "es7",
             "es6",
@@ -54,8 +59,12 @@
         "esnext",
         "esnext.asynciterable"
     ],
-    "files": ["./node_modules/@types/node/index.d.ts"],
-    "include": ["./src/**/*.ts"],
+    "files": [
+        "../../node_modules/@types/node/index.d.ts"
+    ],
+    "include": [
+        "./src/**/*.ts"
+    ],
     "exclude": [
         "./node_modules/**/*",
         "typings/browser.d.ts",
