Fix sonarcloud issues

--- a/packages/web3-utils/tsconfig.json
+++ b/packages/web3-utils/tsconfig.json
@@ -26,8 +26,7 @@
         "esModuleInterop": true,
         "outDir": "dist",
         "types": [
-            "node",
-            "jest"
+            "node"
         ],
         "typeRoots": [
             "node_modules/@types"
