--- a/.github/workflows/massa-web3-deploy-test-smartContract.yml
+++ b/.github/workflows/massa-web3-deploy-test-smartContract.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: "18"
           cache: "npm"
-          cache-dependency-path: ./examples/smartContracts/contracts/package-lock.json
+          cache-dependency-path: ./contracts/package-lock.json
 
       - name: Install dependencies
         run: npm install
