--- a/packages/massa-web3/tsconfig.json
+++ b/packages/massa-web3/tsconfig.json
@@ -30,7 +30,7 @@
             "jest"
         ],
         "typeRoots": [
-            "node_modules/@types"
+            "../../node_modules/@types"
         ],
         "lib": [
             "es7",
