--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -37,18 +37,18 @@
   },
   "devDependencies": {
     "@massalabs/eslint-config": "^0.0.10",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.5",
     "eslint-plugin-jsdoc": "^40.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint": "^8.34.0",
-    "jest-environment-jsdom": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "prettier-eslint": "^15.0.1",
     "rimraf": "^5.0.1",
@@ -59,7 +59,7 @@
     "typedoc": "^0.23.25",
     "typescript": "^4.9.5",
     "util": "^0.12.5",
-    "webpack-cli": "^5.1.1",
-    "webpack": "^5.82.0"
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.1"
   }
 }
