--- a/packages/web3-utils/tsconfig.json
+++ b/packages/web3-utils/tsconfig.json
@@ -29,7 +29,7 @@
             "node"
         ],
         "typeRoots": [
-            "node_modules/@types"
+            "../../node_modules/@types"
         ],
         "lib": [
             "es7",
