--- a/.github/workflows/massa-web3-code-snippets.yml
+++ b/.github/workflows/massa-web3-code-snippets.yml
@@ -29,6 +29,16 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org
 
+      - name: Install dependencies
+        run: |
+          npm ci
+        working-directory: ./
+
+      - name: Build workspace
+        run: |
+          npm ci
+        working-directory: ./
+
       - name: Install project dependencies
         run: |
           npm i
