Fix timeout clear

--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -16,7 +16,7 @@
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
-        "test": "jest",
+        "test": "jest ----detectOpenHandles --forceExit",
         "test:watch": "jest --watch",
         "test:watch:all": "jest --watchAll",
         "test:cov": "jest --coverage",
