--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -9,7 +9,6 @@
     "clean-dist": "rimraf dist/*",
     "build-esm": "tsc --project tsconfig.esm.json",
     "build-commonjs": "tsc --project tsconfig.commonjs.json",
-    "build-bundle": "webpack",
     "build": "npm-run-all clean-dist build-*",
     "test": "jest --passWithNoTests",
     "test:cov": "jest --coverage --passWithNoTests",
@@ -58,8 +57,6 @@
     "tslib": "^2.6.1",
     "typedoc": "^0.23.25",
     "typescript": "^4.9.5",
-    "util": "^0.12.5",
-    "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.1"
+    "util": "^0.12.5"
   }
 }
