--- a/.github/workflows/workspace-unit-test.yml
+++ b/.github/workflows/workspace-unit-test.yml
@@ -6,9 +6,9 @@ on:
 
 jobs:
   build:
-    defaults:
-      run:
-        working-directory: ./packages/massa-web3/examples/smartContracts/
+    strategy:
+      matrix:
+        project: [massa-web3, web3-utils]
 
     runs-on: ubuntu-latest
 
@@ -44,13 +44,6 @@ jobs:
           npm run build
         working-directory: ./
 
-      - name: Execute unit tests
-        run: |
-          npm ci
-          npm run build
-          npm run fmt:check
-          npm run test
-
       - name: allow access to coverage.sh
         run: chmod +x ./scripts/coverage.sh
         shell: bash
@@ -58,7 +51,7 @@ jobs:
       - name: Extract coverage
         id: coverage
         run: |
-          value=$(npm run test:cov | awk '/All files/ {print $10}' | tr -d '%')
+          value=$(npm run test:cov -w ${{ matrix.project }} | awk '/All files/ {print $10}' | tr -d '%')
           echo "coverage=$value" >> $GITHUB_OUTPUT
 
       - name: Add test coverage to README
@@ -66,6 +59,7 @@ jobs:
         shell: bash
         env:
           COVERAGE: ${{ steps.coverage.outputs.coverage }}
+          PROJECT: ${{ matrix.project }}
 
       - name: Check if coverage changed
         id: check_coverage_changed
