--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -11,7 +11,7 @@
     "build-commonjs": "tsc --project tsconfig.commonjs.json",
     "build": "npm-run-all clean-dist build-*",
     "test": "jest --passWithNoTests",
-    "test:cov": "jest --coverage --passWithNoTests",
+    "test:cov": "jest --coverage --silent --passWithNoTests",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
