--- a/.github/workflows/workspace-coverage.yml
+++ b/.github/workflows/workspace-coverage.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
-        if: ${{ github.ref == 'refs/heads/main' && steps.check_coverage_changed.outputs.coverage_changed != '' }}
+        if: ${{ steps.check_coverage_changed.outputs.coverage_changed != '' }}
         with:
           commit_message: "Generate coverage badge"
           file_pattern: "README.md"
