--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -16,10 +16,10 @@
         "update-version-major": "npm version major",
         "update-version-minor": "npm version minor",
         "update-version-patch": "npm version patch",
-        "test": "jest ----detectOpenHandles --forceExit",
+        "test": "jest --detectOpenHandles --forceExit",
         "test:watch": "jest --watch",
         "test:watch:all": "jest --watchAll",
-        "test:cov": "jest --coverage --silent",
+        "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
         "lint": "eslint .",
