--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "npm run test --ws --if-present",
     "test:cov": "npm run test:cov --ws --if-present",
     "build": "npm run build --ws --if-present",
-    "prettier": "npm run prettier --ws --if-present",
-    "prettier:fix": "npm run prettier:fix --ws --if-present",
-    "lint": "npm run lint --ws --if-present",
-    "lint:fix": "npm run lint:fix --ws --if-present",
+    "prepare": "husky install",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
     "fmt": "npm run prettier:fix && npm run lint:fix",
-    "fmt:check": "npm run prettier && npm run lint",
-    "prepare": "husky install"
+    "fmt:check": "npm run prettier && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,24 @@
   "workspaces": [
     "packages/web3-utils",
     "packages/massa-web3"
-  ]
+  ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^4.9.5",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "prettier": "^2.8.4",
+    "prettier-eslint": "^15.0.1",
+    "prettier-standard": "^16.4.1",
+    "@massalabs/eslint-config": "^0.0.9",
+    "@massalabs/prettier-config-as": "^0.0.2"
+
+  }
 }
