--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
     "packages/massa-web3"
   ],
   "devDependencies": {
+    "@massalabs/eslint-config": "^0.0.9",
+    "@massalabs/prettier-config-as": "^0.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "eslint": "^8.51.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "typescript": "^4.9.5",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "prettier": "^2.8.4",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^8.51.0",
+    "husky": "^8.0.0",
     "prettier-eslint": "^15.0.1",
     "prettier-standard": "^16.4.1",
-    "@massalabs/eslint-config": "^0.0.9",
-    "@massalabs/prettier-config-as": "^0.0.2"
-
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   }
 }
