--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
         "esModuleInterop": true,
         "outDir": "./dist",
         "types": [
-            "node"
+            "node",
+            "jest"
         ],
         "lib": [
             "dom",
