--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "massa-web3-workspace",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
     "test": "jest",
     "test:cov": "npm run test:cov --ws --if-present",
     "build": "npm run build --ws --if-present",
-    "prepare": "husky install",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -17,10 +15,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/massalabs/massa-web3.git"
+    "url": "https://github.com/massalabs/massa-web3.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/massalabs/massa-web3/issues"
   },
@@ -40,13 +36,10 @@
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsdoc": "^40.0.0",
-    "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
     "prettier": "^2.8.4",
-    "prettier-eslint": "^15.0.1",
-    "prettier-standard": "^16.4.1",
     "typescript": "^4.9.5"
   }
 }
