--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -6,48 +6,35 @@
     "module": "dist/esm/index.js",
     "types": "dist/esm/index.d.ts",
     "scripts": {
-        "up": "npm update",
-        "check": "npm outdated",
-        "upgrade": "npm run up && npm run check && npm run build",
-        "clean-dist": "rimraf dist/*",
-        "build-esm": "tsc --project tsconfig.esm.json",
-        "build-commonjs": "tsc --project tsconfig.commonjs.json",
-        "build": "npm-run-all clean-dist build-*",
-        "test": "jest --detectOpenHandles --forceExit",
-        "test:watch": "jest --watch",
-        "test:watch:all": "jest --watchAll",
-        "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
-        "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
-        "test-wallet": "ts-node ./examples/wallet/index.ts",
-        "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json"
+      "up": "npm update",
+      "check": "npm outdated",
+      "upgrade": "npm run up && npm run check && npm run build",
+      "clean-dist": "rimraf dist/*",
+      "build-esm": "tsc --project tsconfig.esm.json",
+      "build-commonjs": "tsc --project tsconfig.commonjs.json",
+      "build": "npm-run-all clean-dist build-*",
+      "test": "jest --detectOpenHandles --forceExit",
+      "test:watch": "jest --watch",
+      "test:watch:all": "jest --watchAll",
+      "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
+      "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
+      "test-wallet": "ts-node ./examples/wallet/index.ts",
+      "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json"
     },
     "author": "Massa Labs <info@massa.net>",
-    "contributors": [
-        "Evgeni Pirianov",
-        "Yvan Sraka <yvan@sraka.xyz>"
-    ],
-    "license": "(MIT AND Apache-2.0)",
+    "contributors": ["Evgeni Pirianov", "Yvan Sraka"],
+    "license": "MIT",
     "homepage": "https://github.com/massalabs/massa-web3",
     "repository": {
-        "type": "git",
-        "url": "git+https://github.com/massalabs/massa-web3"
+      "type": "git",
+      "url": "git+https://github.com/massalabs/massa-web3"
     },
-    "private": false,
-    "publishConfig": {
-        "access": "public",
-        "registry": "https://registry.npmjs.org/"
-    },
-    "keywords": [
-        "web3",
-        "ts",
-        "sdk",
-        "massa"
-    ],
+    "keywords": ["web3", "ts", "sdk", "massa"],
     "files": [
         "dist",
         "bundle.js",
         "bundle.min.js"
-    ],
+      ],    
     "dependencies": {
         "@massalabs/wallet-provider": "^1.3.3",
         "@massalabs/web3-utils": "^1.4.2",
@@ -94,9 +81,5 @@
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
         "utf-8-validate": "^6.0.2"
-    },
-    "prettier": "@massalabs/prettier-config-as",
-    "_moduleAliases": {
-        "@massalabs/massa-web3": "./dist/esm/index.js"
     }
 }
