--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -1,7 +1,8 @@
 {
+
   "name": "@massalabs/web3-utils",
   "version": "1.4.2",
-  "description": "Web3 utils class and tools that are useful to build more complex projects on the frontend.",
+  "description": "Set of utilities shared between multiple @massalabs packages",
   "main": "dist/cmd/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -23,12 +24,11 @@
     "type": "git",
     "url": "git+https://github.com/massalabs/web3-utils.git"
   },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/massalabs/web3-utils/issues"
   },
-  "homepage": "https://github.com/massalabs/web3-utils#readme",
+  "homepage": "https://github.com/massalabs/massa-web3",
   "dependencies": {
     "buffer": "^6.0.3",
     "events": "^3.3.0",
