Clean up tsconfig files

--- a/packages/massa-web3/tsconfig.json
+++ b/packages/massa-web3/tsconfig.json
@@ -5,5 +5,9 @@
     },
     "include": [
         "./src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
     ]
 }
