--- a/packages/web3-utils/tsconfig.esm.json
+++ b/packages/web3-utils/tsconfig.esm.json
@@ -1,8 +1,14 @@
 {
-    // Extends base TypeScript configuration from 'tsconfig.json'
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        // The location where the output files will be placed.
+        "target": "ESNext",
+        "module": "ESNext",
         "outDir": "./dist/esm/",
+        "sourceMap": true,
+        "inlineSources": true
     },
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
 }
