Update wallet provider

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,13 +1,22 @@
-build
-node_modules
-.github
-bundle.*
-docs
-dist
-*.json
-.lintstagedrc
-README.md
-*.html
-*.md
-coverage
+.env*
+.eslintignore
 .eslintrc.cjs
+.github
+.gitignore
+.husky
+.lintstagedrc
+.npmignore
+.prettierignore
+*.html
+*.json
+*.md
+*.wasm
+build
+bundle.*
+coverage
+dist
+docs
+node_modules
+scripts
+README.md
+LICENSE
