Fix some unit tests

--- a/packages/massa-web3/examples/.env.example
+++ b/packages/massa-web3/examples/.env.example
@@ -4,5 +4,7 @@ RECEIVER_PRIVATE_KEY="S1ykLaxXyMnJoaWLYds8UntqKTamZ4vcxrZ1fdToR8WpWEpk3FC"
 JSON_RPC_URL_PUBLIC=https://buildnet.massa.net/api/v2
 JSON_RPC_URL_PRIVATE=https://buildnet.massa.net/api/v2
 
+CHAIN_ID=77658366
+
 #JSON_RPC_URL_PUBLIC=http://127.0.0.1:33035
 #JSON_RPC_URL_PRIVATE=http://127.0.0.1:33034
