lint: add type check

--- a/packages/massa-web3/tsconfig.json
+++ b/packages/massa-web3/tsconfig.json
@@ -5,6 +5,8 @@
     },
     "include": [
         "./src/**/*.ts",
+        "./examples/wallet/**/*.ts",
+        "./examples/smartContracts/*.ts"
     ],
     "exclude": [
         "node_modules",
