--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test:cov": "npm run test:cov --ws --if-present",
     "test:all": "npm run test:all --ws --if-present",
     "build": "npm run build --ws --if-present",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . && npm run check-types --ws",
+    "lint:fix": "eslint . --fix && npm run check-types --ws",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "fmt": "npm run prettier:fix && npm run lint:fix",
