--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -20,6 +20,7 @@
         "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
+        "check-types": "tsc --noEmit",
         "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json"
     },
     "author": "Massa Labs <info@massa.net>",
