--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/massalabs/massa-web3",
   "dependencies": {
+    "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "string_decoder": "^1.3.0"
@@ -38,8 +39,8 @@
     "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "jest-environment-jsdom": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.0",
