--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "bignumber.js": "^9.1.1",
+    "assemblyscript": "^0.27.22",
     "eslint": "^8.51.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
