--- a/packages/massa-web3/tsconfig.esm.json
+++ b/packages/massa-web3/tsconfig.esm.json
@@ -9,6 +9,7 @@
     },
     "exclude": [
         "node_modules",
-        "**/*.spec.ts"
+        "**/*.spec.ts",
+        "./examples/**/*"
     ]
 }
