--- a/package.json
+++ b/package.json
@@ -11,25 +11,20 @@
     "lint:fix": "eslint . --fix && npm run check-types --ws",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "fmt": "npm run prettier:fix && npm run lint:fix",
+    "fmt": "npm run lint:fix && npm run prettier:fix",
     "fmt:check": "npm run prettier && npm run lint"
   },
   "devDependencies": {
-    "@massalabs/eslint-config": "^0.0.9",
+    "@massalabs/eslint-config": "^0.0.10",
     "@types/jest": "^29.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
     "bignumber.js": "^9.1.1",
-    "eslint": "^8.51.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^40.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^48.0.4",
     "husky": "^8.0.0",
     "lint-staged": "^15.0.1",
-    "prettier": "^2.8.4",
+    "prettier": "^3.2.4",
     "typescript": "^4.9.5"
   },
   "workspaces": [
